--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,7 @@
   color: #5ba4a4;
   border-radius: 4px;
   margin-right: 12px;
+  height: fit-content;
 }
 
 .job-list .search .tag-container .search-tag:not(:nth-child(n + 3)) {
@@ -87,12 +88,12 @@
 .job-list .jobs .job-card {
   width: 100%;
   max-width: 500px;
-  margin: 0 auto;
+  margin: 0 auto 3rem;
   background-color: white;
   border-radius: 6px;
   position: relative;
-  padding: 1.5rem;
-  padding-top: 40px;
+  padding: 40px 1.5rem 0.8rem;
+  box-shadow: 9px 9px 30px -16px #5ba4a4;
 }
 
 .job-list .jobs .job-card__details img {
@@ -104,7 +105,107 @@
   width: 50px;
 }
 
+.job-list .jobs .job-card__details .details {
+  padding-bottom: 0.8rem;
+  border-bottom: 2px solid #e8e8e8;
+}
+
+.job-list .jobs .job-card__details .details .top {
+  font-weight: 700;
+  padding-bottom: 0.5rem;
+}
+
+.job-list .jobs .job-card__details .details .top .name {
+  color: #5ba4a4;
+  font-size: 0.8rem;
+  margin-right: 0.6rem;
+}
+
+.job-list .jobs .job-card__details .details .top .new {
+  color: white;
+  background-color: #5ba4a4;
+  border-radius: 100px;
+  padding: 0.3rem 0.4rem;
+  font-size: 0.62rem;
+  text-transform: uppercase;
+  margin-right: 0.3rem;
+}
+
+.job-list .jobs .job-card__details .details .top .featured {
+  font-size: 0.62rem;
+  text-transform: uppercase;
+  color: white;
+  background-color: #2c3a3a;
+  border-radius: 100px;
+  padding: 0.3rem 0.4rem;
+  margin-bottom: -20px;
+}
+
+.job-list .jobs .job-card__details .details .role {
+  font-size: 15px;
+  font-weight: 700;
+  color: #2c3a3a;
+  margin: 0.4rem 0;
+}
+
+.job-list .jobs .job-card__details .details .bottom {
+  display: flex;
+  align-items: center;
+  color: #c5c5c5;
+  font-size: 0.8rem;
+  font-weight: 400;
+  margin-top: 0.8rem;
+}
+
+.job-list .jobs .job-card__details .details .bottom span {
+  transform: translateY(-4px);
+  margin: 0 0.3rem;
+}
+
+.job-list .jobs .job-card__tags {
+  padding-top: 0.8rem;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.job-list .jobs .job-card__tags p {
+  cursor: pointer;
+  padding: 0.3rem;
+  color: #5ba4a4;
+  background-color: #eef6f6;
+  margin-right: 0.7rem;
+  margin-bottom: 0.7rem;
+  font-weight: 700;
+  font-size: 13px;
+}
+
 .job-list .jobs .job-card.featured {
   border-left: 4px solid #5ba4a4;
+}
+
+p.attribution {
+  background-color: #effafa;
+  margin-bottom: 0;
+  padding-bottom: 1rem;
+  color: #2c3a3a;
+}
+
+p.attribution a {
+  color: #2c3a3a;
+  text-decoration: none;
+}
+
+p.attribution a:hover {
+  color: #5ba4a4;
+}
+
+p.attribution a svg {
+  width: 65px;
+  margin-bottom: -8px;
+  fill: #2c3a3a;
+}
+
+p.attribution a svg:hover {
+  fill: #5ba4a4;
 }
 /*# sourceMappingURL=main.css.map */
