--- a/scss/main.scss
+++ b/scss/main.scss
@@ -47,6 +47,7 @@ $VeryDarkGrayishCyan: hsl(180, 14%, 20%);
         color: $DesaturatedDarkCyan;
         border-radius: 4px;
         margin-right: 12px;
+        height: fit-content;
 
         &:not(:nth-child(n + 3)) {
           margin-bottom: 12px;
@@ -85,12 +86,12 @@ $VeryDarkGrayishCyan: hsl(180, 14%, 20%);
     .job-card {
       width: 100%;
       max-width: 500px;
-      margin: 0 auto;
+      margin: 0 auto 3rem;
       background-color: white;
       border-radius: 6px;
       position: relative;
-      padding: 1.5rem;
-      padding-top: 40px;
+      padding: 40px 1.5rem 0.8rem;
+      box-shadow: 9px 9px 30px -16px rgba(91, 164, 164, 1);
 
       &__details {
         img {
@@ -101,10 +102,98 @@ $VeryDarkGrayishCyan: hsl(180, 14%, 20%);
           object-fit: contain;
           width: 50px;
         }
+        .details {
+          padding-bottom: 0.8rem;
+          border-bottom: 2px solid #e8e8e8;
+          .top {
+            font-weight: 700;
+            padding-bottom: 0.5rem;
+            .name {
+              color: $DesaturatedDarkCyan;
+              font-size: 0.8rem;
+              margin-right: 0.6rem;
+            }
+            .new {
+              color: white;
+              background-color: $DesaturatedDarkCyan;
+              border-radius: 100px;
+              padding: 0.3rem 0.4rem;
+              font-size: 0.62rem;
+              text-transform: uppercase;
+              margin-right: 0.3rem;
+            }
+            .featured {
+              font-size: 0.62rem;
+              text-transform: uppercase;
+              color: white;
+              background-color: $VeryDarkGrayishCyan;
+              border-radius: 100px;
+              padding: 0.3rem 0.4rem;
+              margin-bottom: -20px;
+            }
+          }
+          .role {
+            font-size: 15px;
+            font-weight: 700;
+            color: $VeryDarkGrayishCyan;
+            margin: 0.4rem 0;
+          }
+          .bottom {
+            display: flex;
+            align-items: center;
+            color: #c5c5c5;
+            font-size: 0.8rem;
+            font-weight: 400;
+            margin-top: 0.8rem;
+            span {
+              transform: translateY(-4px);
+              margin: 0 0.3rem;
+            }
+          }
+        }
+      }
+      &__tags {
+        padding-top: 0.8rem;
+        display: flex;
+        flex-wrap: wrap;
+
+        p {
+          cursor: pointer;
+          padding: 0.3rem;
+          color: $DesaturatedDarkCyan;
+          background-color: $LightGrayishCyanFilterTablets;
+          margin-right: 0.7rem;
+          margin-bottom: 0.7rem;
+          font-weight: 700;
+          font-size: 13px;
+        }
       }
     }
     .job-card.featured {
       border-left: 4px solid $DesaturatedDarkCyan;
+    }
+  }
+}
+
+p.attribution {
+  background-color: $LightGrayishCyanBackground;
+  margin-bottom: 0;
+  padding-bottom: 1rem;
+  color: $VeryDarkGrayishCyan;
+  a {
+    color: $VeryDarkGrayishCyan;
+    text-decoration: none;
+    &:hover {
+      color: $DesaturatedDarkCyan;
+    }
+
+    svg {
+      width: 65px;
+      margin-bottom: -8px;
+      fill: $VeryDarkGrayishCyan;
+      &:hover {
+        fill: $DesaturatedDarkCyan;
+      }
     }
   }
 }
