--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,11 +20,12 @@ $VeryDarkGrayishCyan: hsl(180, 14%, 20%);
 .job-list {
   //   padding: 4rem 1.5rem 2rem;
   background-color: $LightGrayishCyanBackground;
+  padding-top: 3.5rem;
 
   .search {
     width: 80%;
     background-color: white;
-    transform: translateY(-50%);
+    transform: translateY(calc(-50% - 3.5rem));
     display: flex;
     align-items: center;
     padding: 1.2rem;
