--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,9 +13,6 @@ $VeryDarkGrayishCyan: hsl(180, 14%, 20%);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
 }
 .job-list {
   //   padding: 4rem 1.5rem 2rem;
@@ -28,7 +25,6 @@ $VeryDarkGrayishCyan: hsl(180, 14%, 20%);
     transform: translateY(calc(-50% - 3.5rem));
     display: flex;
     align-items: center;
-    padding: 1.2rem;
     border-radius: 6px;
     margin: 0 auto;
     margin-bottom: 0rem;
@@ -38,7 +34,8 @@ $VeryDarkGrayishCyan: hsl(180, 14%, 20%);
       flex: 1;
       display: flex;
       flex-wrap: wrap;
-      padding-bottom: -12px;
+      padding: 1.2rem;
+      padding-bottom: calc(1.2rem - 12px);
 
       .search-tag {
         display: flex;
@@ -59,6 +56,7 @@ $VeryDarkGrayishCyan: hsl(180, 14%, 20%);
           font-size: 0.75rem;
           line-height: 1;
           margin-bottom: -2px;
+          font-weight: 700;
         }
 
         img {
@@ -67,11 +65,16 @@ $VeryDarkGrayishCyan: hsl(180, 14%, 20%);
           width: 20px;
           object-fit: contain;
           cursor: pointer;
+
+          &:hover {
+            background-color: $VeryDarkGrayishCyan;
+          }
         }
       }
     }
     .clear-search {
       padding: 0.1rem 0.3rem;
+      margin-right: 1.2rem;
       cursor: pointer;
       color: $VeryDarkGrayishCyan;
       font-size: 0.8rem;
@@ -87,7 +90,7 @@ $VeryDarkGrayishCyan: hsl(180, 14%, 20%);
     .job-card {
       width: 100%;
       max-width: 500px;
-      margin: 0 auto 3rem;
+      margin: 0 auto 4rem;
       background-color: white;
       border-radius: 6px;
       position: relative;
@@ -167,6 +170,11 @@ $VeryDarkGrayishCyan: hsl(180, 14%, 20%);
           margin-bottom: 0.7rem;
           font-weight: 700;
           font-size: 13px;
+
+          &:hover {
+            color: white;
+            background-color: $VeryDarkGrayishCyan;
+          }
         }
       }
     }
@@ -194,6 +202,57 @@ p.attribution {
       fill: $VeryDarkGrayishCyan;
       &:hover {
         fill: $DesaturatedDarkCyan;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .top-section {
+    background-color: $DesaturatedDarkCyan;
+    background-image: url(../images/bg-header-desktop.svg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+  .job-list {
+    .jobs {
+      .job-card {
+        max-width: 1000px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1.5rem;
+
+        &__details {
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
+          img {
+            position: initial;
+            padding: 0;
+            transform: translateY(0);
+            width: 65px;
+            margin-right: 1rem;
+          }
+          .details {
+            border: none;
+            padding: 0;
+            .top {
+              .name {
+                font-size: 0.8rem;
+                margin-right: 0.6rem;
+              }
+            }
+            .role {
+              font-size: 17px;
+              margin: 0.3rem 0;
+            }
+            .bottom {
+              margin-top: 0.4rem;
+            }
+          }
+        }
       }
     }
   }
