--- a/scss/main.scss
+++ b/scss/main.scss
@@ -223,6 +223,7 @@ p.attribution {
         justify-content: space-between;
         align-items: center;
         padding: 1.5rem;
+        margin-bottom: 2rem;
 
         &__details {
           display: flex;
