--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,11 @@ $LightGrayishCyanFilterTablets: hsl(180, 31%, 95%);
 $DarkGrayishCyan: hsl(180, 8%, 52%);
 $VeryDarkGrayishCyan: hsl(180, 14%, 20%);
 
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
 .top-section {
   height: 25vh;
   background-color: $DesaturatedDarkCyan;
@@ -16,6 +21,7 @@ $VeryDarkGrayishCyan: hsl(180, 14%, 20%);
 }
 .job-list {
   //   padding: 4rem 1.5rem 2rem;
+  flex: 1;
   background-color: $LightGrayishCyanBackground;
   padding-top: 3.5rem;
 
@@ -46,10 +52,7 @@ $VeryDarkGrayishCyan: hsl(180, 14%, 20%);
         border-radius: 4px;
         margin-right: 12px;
         height: fit-content;
-
-        &:not(:nth-child(n + 3)) {
-          margin-bottom: 12px;
-        }
+        margin-bottom: 12px;
 
         p {
           padding: 0 0.3rem;
